[gd_scene load_steps=8 format=3 uid="uid://dw8ejtv7ema2l"]

[ext_resource type="Script" path="res://Scripts/UI/Equipped_ui.gd" id="1_wootg"]
[ext_resource type="Texture2D" uid="uid://bg2uil1nviu7" path="res://Assets/Images/Icon/icon (4).jpg" id="2_cv1q2"]
[ext_resource type="Texture2D" uid="uid://bmpwl14serglo" path="res://Assets/Images/Frame_rank/frame-grey.png" id="2_lul25"]
[ext_resource type="Texture2D" uid="uid://dakow4iscqjnb" path="res://Assets/Images/Icon/icon (2).jpg" id="4_xe41h"]
[ext_resource type="Texture2D" uid="uid://bersbas331jwt" path="res://Assets/Images/Icon/icon (5).jpg" id="5_rnhvl"]
[ext_resource type="Texture2D" uid="uid://cwokufnmt2cxb" path="res://Assets/Images/Icon/icon.jpg" id="6_60gah"]
[ext_resource type="Texture2D" uid="uid://dsaqw2ia8ynyu" path="res://Assets/Images/Icon/icon (3).jpg" id="7_i0u2c"]

[node name="EquippedUI" type="Control"]
custom_minimum_size = Vector2(0, 23)
layout_mode = 3
anchor_left = 0.383
anchor_top = 0.075
anchor_right = 0.383
anchor_bottom = 0.075
offset_left = -34.47
offset_top = -12.0
offset_right = 34.53
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_wootg")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(68, 0)
layout_mode = 0
offset_right = 68.0
offset_bottom = 23.0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 0
offset_right = 68.0
offset_bottom = 23.0
theme_override_constants/separation = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 1
alignment = 1

[node name="slot_0" type="TextureButton" parent="Panel/HBoxContainer/VBoxContainer" groups=["btn_slot"]]
custom_minimum_size = Vector2(11, 11)
layout_mode = 2
texture_normal = ExtResource("2_cv1q2")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureRect" type="TextureRect" parent="Panel/HBoxContainer/VBoxContainer/slot_0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_lul25")
expand_mode = 3

[node name="slot_2" type="TextureButton" parent="Panel/HBoxContainer/VBoxContainer" groups=["btn_slot"]]
custom_minimum_size = Vector2(11, 11)
layout_mode = 2
texture_normal = ExtResource("4_xe41h")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureRect" type="TextureRect" parent="Panel/HBoxContainer/VBoxContainer/slot_2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_lul25")
expand_mode = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 1
alignment = 1

[node name="slot_1" type="TextureButton" parent="Panel/HBoxContainer/VBoxContainer2" groups=["btn_slot"]]
custom_minimum_size = Vector2(11, 11)
layout_mode = 2
texture_normal = ExtResource("5_rnhvl")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureRect" type="TextureRect" parent="Panel/HBoxContainer/VBoxContainer2/slot_1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_lul25")
expand_mode = 3

[node name="slot_5" type="TextureButton" parent="Panel/HBoxContainer/VBoxContainer2" groups=["btn_slot"]]
custom_minimum_size = Vector2(11, 11)
layout_mode = 2
texture_normal = ExtResource("6_60gah")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureRect" type="TextureRect" parent="Panel/HBoxContainer/VBoxContainer2/slot_5"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_lul25")
expand_mode = 1

[node name="slot_3" type="TextureButton" parent="Panel/HBoxContainer" groups=["btn_slot"]]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
texture_normal = ExtResource("4_xe41h")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureRect" type="TextureRect" parent="Panel/HBoxContainer/slot_3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_lul25")
expand_mode = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 1
alignment = 1

[node name="slot_4" type="TextureButton" parent="Panel/HBoxContainer/VBoxContainer3" groups=["btn_slot"]]
custom_minimum_size = Vector2(11, 11)
layout_mode = 2
texture_normal = ExtResource("7_i0u2c")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureRect" type="TextureRect" parent="Panel/HBoxContainer/VBoxContainer3/slot_4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_lul25")
expand_mode = 3

[node name="slot_6" type="TextureButton" parent="Panel/HBoxContainer/VBoxContainer3" groups=["btn_slot"]]
custom_minimum_size = Vector2(11, 11)
layout_mode = 2
texture_normal = ExtResource("7_i0u2c")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureRect" type="TextureRect" parent="Panel/HBoxContainer/VBoxContainer3/slot_6"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_lul25")
expand_mode = 3

[node name="VBoxContainer4" type="VBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 1
alignment = 1

[node name="slot_7" type="TextureButton" parent="Panel/HBoxContainer/VBoxContainer4" groups=["btn_slot"]]
custom_minimum_size = Vector2(11, 11)
layout_mode = 2
texture_normal = ExtResource("2_cv1q2")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureRect" type="TextureRect" parent="Panel/HBoxContainer/VBoxContainer4/slot_7"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_lul25")
expand_mode = 3

[node name="slot_8" type="TextureButton" parent="Panel/HBoxContainer/VBoxContainer4" groups=["btn_slot"]]
custom_minimum_size = Vector2(11, 11)
layout_mode = 2
texture_normal = ExtResource("5_rnhvl")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureRect" type="TextureRect" parent="Panel/HBoxContainer/VBoxContainer4/slot_8"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_lul25")
expand_mode = 3

[connection signal="pressed" from="Panel/HBoxContainer/slot_3" to="." method="_on_slot_3_pressed"]
